# metal-quantum

./: .gitignore  404.html  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  debug_shader.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  verify_gradient.py  verify_native.py
.github/workflows/: docs.yml
api/: index.html
api/algorithms/: index.html
api/backends/: index.html
api/circuit/: index.html
api/torch/: index.html
api/visualization/: index.html
architecture/: index.html
benchmarks/: benchmark_mps.py  benchmark_results.json  cpu_vs_aer_benchmark.py  index.html  large_scale_benchmark.py
docs/: architecture.md  benchmarks.md  index.md  installation.md  quickstart.md
docs/api/: algorithms.md  backends.md  circuit.md  index.md  torch.md  visualization.md
docs/user_guide/: algorithms.md  basics.md  pytorch.md
docs_examples/: basic_sim.py  pytorch_simple.py  qaoa_maxcut.py  qiskit_interop.py  vqe_h2.py
examples/: benchmark.py  ghz_20q.ipynb  ghz_20q.py  high_level_gates.py  qaoa_maxcut.py  qiskit_interop.py  torch_qnn_classifier.py  vqe_h2.py
installation/: index.html
license/: index.html
metalq/: api.py  visualization.py
metalq/adapters/: __init__.py  qiskit_adapter.py
metalq/algorithms/: __init__.py  qaoa.py  vqe.py
metalq/backends/: __init__.py  base.py
metalq/backends/cpu/: __init__.py  backend.py  fast_gates.py  gates.py  gradient.py  measurement.py  statevector.py
metalq/backends/mps/: __init__.py  backend.py
metalq/python/: pyproject.toml
metalq/python/metalq/: circuit_data.py
metalq/torch/: __init__.py  function.py  layer.py
native/: Makefile  gate_executor.h  gate_executor.m  measurement.h  measurement.m  metalq.m
native/shaders/: quantum_gates.metal
search/: search_index.json
user_guide/algorithms/: index.html
user_guide/basics/: index.html
user_guide/pytorch/: index.html
