[project]
name = "metalq"
version = "0.1.0"
description = "Quantum circuit simulator on Apple Silicon Metal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "qiskit>=1.0.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "qiskit-aer",
    "dill",
    "jupyter",
    "notebook"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["metalq/python/metalq"]

[tool.hatch.build.targets.wheel.force-include]
"metalq/python/metalq/lib" = "metalq/lib"
